
######################
#                    #
#      2022.12       #
#                    #
######################
New features and other changes:
1. Added Merge-File alias to Join-File function based on feedback.
2. Added function Install-VMwareTools.
3. Added UTC date string to output of Install-Patches function (InstallRemote.ps1) so you can see when things were done.

######################
#                    #
#      2022.11       #
#                    #
######################
New features and other changes:
1. Added Test-MTU.
2. Added Get-HttpHeaderSetting.

######################
#                    #
#      2022.10       #
#                    #
######################
New features and other changes:
1. Added support for Windows 10/11 version 22H2.

######################
#                    #
#      2022.09       #
#                    #
######################
New features and other changes:
1. Added check on Find-EmptyGroup, Find-HiddenGALUser, Get-FSMO, Get-LockedOutStatus, Get-NewADUser, Get-NewADGroup, Get-PrivilegedGroup, Get-ProtectedGroup, Get-ProtectedUser, Get-UserWithThumbnail, Open-ADDomainsAndTrusts, Open-ADSitesAndServices, Open-ADUsersAndComputers, Open-DHCPmgmt, Open-DNSmgmt, Open-GroupPolicyMgmt, Register-ADSIEdit, Register-Schema, Restart-ActiveDirectory, Restart-DNS, Restart-KDC, and Set-ADProfilePicture to see if Active Directory tools are installed.
2. Changed the way the AD query in Find-EmptyGroup and Find-HiddenGALUser run so that it is faster and resolved an issue where if the SearchBase string was empty it was throwing an error.
3. In Get-FSMO, now defaults to native PowerShell method. If ActiveDirectory module is not installed it will use the legacy netdom query. Also added -netdom switch so you can specify to use legacy method.